FINITO (fixato dimensione immagine numeroverde)

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
             <nav class="col-xs-12 col-sm-6">
                 <ul>
                     <li><a href="contatti.html" class="hvr-shutter-out-vertical">Contatti</a></li>
-                    <li><a href="preventivo.html" class="hvr-shutter-out-vertical">Preventivi</a></li>
-                    <li><a href="#" class="hvr-shutter-out-vertical">Accesso riservato</a></li>
+                    <li><a href="moduli/preventivo.html" class="hvr-shutter-out-vertical">Preventivi</a></li>
+                    <li><a href="http://abacond.cedhousesuite.com/" class="hvr-shutter-out-vertical">Accesso riservato</a></li>
                     <!--<li><a href="#" class="hvr-shutter-out-vertical">Home </a></li>-->
                 </ul>
             </nav>
@@ -39,17 +39,19 @@
                 <article class="col-xs-12 col-sm-12 col-md-4">
                     <div class="immagine numeroVerde"></div>
                     <h2>Numero Verde</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam aliquid aspernatur assumenda autem cum cumque error expedita fuga illum, iste natus, nobis ratione sunt tempora voluptate? Magni nihil quaerat recusandae?</p>
+                    <p>Siamo reperibili sempre in caso di emergenze o per richieste di riparazioni, tramite il nostro numero verde e personale dedicato, che risponde <strong>24/24 ore per 365 giorni l'anno, festività comprese.</strong></p>
                 </article>
                 <article class="col-xs-12 col-sm-6 col-md-4">
                     <div class="immagine archivio"></div>
                     <h2>Accesso ai propri documenti</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam aliquid aspernatur assumenda autem cum cumque error expedita fuga illum, iste natus, nobis ratione sunt tempora voluptate? Magni nihil quaerat recusandae?</p>
+                    <p>Essere trasparenti, questo è uno dei nostri vanti.</p>
+                    <p>I nostri amministrati possono <strong>accedere in ogni momento a qualsiasi documento del condominio</strong>, anche tramite l'archivio internet accessibile tramite nome e password.</p>
                 </article>
                 <article class="col-xs-12 col-sm-6 col-md-4">
                     <div class="immagine manutenzioni"></div>
                     <h2>Manutenzioni programmate</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam aliquid aspernatur assumenda autem cum cumque error expedita fuga illum, iste natus, nobis ratione sunt tempora voluptate? Magni nihil quaerat recusandae?</p>
+                    <p>E' vero, abbiamo un numero verde per le emergenze, ma odiamo le emergenze. Facciamo perciò tutto il possibile per evitarle. Come?</p>
+                    <p>Programmando periodicamente interventi di manutenzione ordinaria che ci consentono di <strong>ridurre la richiesta di interventi urgenti</strong>, e di <strong>ridurre i costi per i condomini</strong> che amministriamo.</p>
                 </article>
             </section>
 
@@ -57,12 +59,15 @@
                 <article class="col-xs-12 col-sm-6">
                     <div class="immagine veracard"></div>
                     <h2>Veracard</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam aliquid aspernatur assumenda autem cum cumque error expedita fuga illum, iste natus, nobis ratione sunt tempora voluptate? Magni nihil quaerat recusandae?</p>
+                    <p>Nonostante una corretta ed attenta gestione le spese di condominio, complici soprattutto le voci relative al riscaldamento ed alla produzione di acqua calda oltre che per l’illuminazione, sono in continuo aumento. Per questo motivo lo studio ABACOND S.a.s. aderisce al circuito VeraCard, al fine di consentire ai propri amministrati di <strong>usufruire di sconti presso negozi ed artigiani convenzionati</strong>, che possano compensare le spese di condominio.</p>
+                    <p><strong>Ogni condomino riceverà gratuitamente una Card</strong> grazie alla quale potrà godere di sconti utilizzandola negli esercizi convenzionati in Trentino Alto Adige ed anche in altre zone d’Italia. L’elenco delle città e delle convenzioni è in continua crescita e consultabile sul sito
+                        <a href="www.veracard.it">www.veracard.it</a> e sarà periodicamente trasmesso ai condòmini tramite email o in formato cartaceo.</p>
                 </article>
                 <article class="col-xs-12 col-sm-6">
                     <div class="immagine assemblee"></div>
                     <h2>Assemblee smart</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam aliquid aspernatur assumenda autem cum cumque error expedita fuga illum, iste natus, nobis ratione sunt tempora voluptate? Magni nihil quaerat recusandae?</p>
+                    <p>L'assemblea serve per valutare il passato e progettare il futuro. Serve anche per apprendere.</p>
+                    <p>Per tutto ciò servono informazioni, ecco perché facciamo le assemblee utilizzando computer e proiettore, tramite i quali illustriamo argomenti e documenti necessari allo scopo. Da molti anni infatti scansioniamo i documenti dei condomini che possono essere così visualizzati a richiesta in assemblea.</p>
                 </article>
             </section>
 
@@ -72,7 +77,7 @@
                 </div>
 
                 <div class="col-xs-12 col-sm-6 col-sm-offset-3">
-                    <a href="preventivo.html" class="pulsante">Richiedi un preventivo gratuito!</a>
+                    <a href="moduli/preventivo.html" class="pulsante">Richiedi un preventivo gratuito!</a>
                 </div>
             </section>
         </main>
