--- a/indexORIGINALE.html
+++ b/indexORIGINALE.html
@@ -20,7 +20,7 @@
             <nav class="col-xs-12 col-sm-6">
                 <ul>
                     <li><a href="contatti.html" class="hvr-shutter-out-vertical">Contatti</a></li>
-                    <li><a href="preventivo.html" class="hvr-shutter-out-vertical">Preventivi</a></li>
+                    <li><a href="moduli/preventivo.html" class="hvr-shutter-out-vertical">Preventivi</a></li>
                     <li><a href="#" class="hvr-shutter-out-vertical">Accesso riservato</a></li>
                     <!--<li><a href="#" class="hvr-shutter-out-vertical">Home </a></li>-->
                 </ul>
@@ -72,7 +72,7 @@
                 </div>
 
                 <div class="col-xs-12 col-sm-6 col-sm-offset-3">
-                    <a href="preventivo.html" class="pulsante">Richiedi un preventivo gratuito!</a>
+                    <a href="moduli/preventivo.html" class="pulsante">Richiedi un preventivo gratuito!</a>
                 </div>
             </section>
         </main>
