--- a/moduli/preventivo.html
+++ b/moduli/preventivo.html
@@ -5,24 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Preventivo | Abacond S.a.s</title>
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/animate.css">
-    <link rel="stylesheet" href="css/stile.css">
+    <link rel="stylesheet" href="../css/bootstrap.min.css">
+    <link rel="stylesheet" href="../css/animate.css">
+    <link rel="stylesheet" href="../css/stile.css">
 </head>
 <body>
     <div class="container principale">
         <header class="row">
             <div class="col-xs-12 col-sm-6">
                 <div id="logo">
-                    <a href="index.html"><img src="img/logo.png" alt=""></a>
+                    <a href="../index.html"><img src="../img/logo.png" alt=""></a>
                 </div>
                 <div id="punchline">Amministrazione condominiale innovativa e affidabile.</div>
             </div>
             <nav class="col-xs-12 col-sm-6">
                 <ul>
-                    <li><a href="contatti.html" class="hvr-shutter-out-vertical">Contatti</a></li>
-                    <li><a href="#" class="hvr-shutter-out-vertical">Preventivi</a></li>
-                    <li><a href="#" class="hvr-shutter-out-vertical">Accesso riservato</a></li>
+                    <li><a href="../contatti.html" class="hvr-shutter-out-vertical">Contatti</a></li>
+                    <li><a href="preventivo.html" class="hvr-shutter-out-vertical">Preventivi</a></li>
+                    <li><a href="http://abacond.cedhousesuite.com/" class="hvr-shutter-out-vertical">Accesso riservato</a></li>
                     <!--<li><a href="#" class="hvr-shutter-out-vertical">Home </a></li>-->
                 </ul>
             </nav>
@@ -34,7 +34,7 @@
                 <p>Vi chiediamo di compilare con precisione i campi sottostanti, in modo da poter proporre un adeguato preventivo per la gestione del condominio da voi richiesta.</p>
 
                 <!----------------------------- FORM CONDOMINI ---------------------------------------->
-                <form action="php/process.php" role="form" id="condominiForm" data-toggle="validator" class="col-xs-12 shake">
+                <form action="../php/process.php" role="form" id="condominiForm" data-toggle="validator" class="col-xs-12 shake">
                     <div class="row">
                         <h3 class="col-xs-12">Referente</h3>
                         <div class="form-group col-sm-6">
@@ -147,7 +147,7 @@
     </div>
 </body>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
-<script type="text/javascript" src="js/validator.min.js"></script>
+<script type="text/javascript" src="../js/validator.min.js"></script>
 <script src="js/scripts.js"></script>
 
 <script>
