--- a/contatti.html
+++ b/contatti.html
@@ -20,8 +20,8 @@
             <nav class="col-xs-12 col-sm-6">
                 <ul>
                     <li><a href="#" class="active hvr-shutter-out-vertical">Contatti</a></li>
-                    <li><a href="preventivo.html" class="hvr-shutter-out-vertical">Preventivi</a></li>
-                    <li><a href="#" class="hvr-shutter-out-vertical">Accesso riservato</a></li>
+                    <li><a href="moduli/preventivo.html" class="hvr-shutter-out-vertical">Preventivi</a></li>
+                    <li><a href="http://abacond.cedhousesuite.com/" class="hvr-shutter-out-vertical">Accesso riservato</a></li>
                     <!--<li><a href="#" class="hvr-shutter-out-vertical">Home </a></li>-->
                 </ul>
             </nav>
