--- a/moduli/fornitori.html
+++ b/moduli/fornitori.html
@@ -20,7 +20,7 @@
             <nav class="col-xs-12 col-sm-6">
                 <ul>
                     <li><a href="../contatti.html" class="active hvr-shutter-out-vertical">Contatti</a></li>
-                    <li><a href="../preventivo.html" class="hvr-shutter-out-vertical">Preventivi</a></li>
+                    <li><a href="preventivo.html" class="hvr-shutter-out-vertical">Preventivi</a></li>
                     <li><a href="#" class="hvr-shutter-out-vertical">Accesso riservato</a></li>
                     <!--<li><a href="#" class="hvr-shutter-out-vertical">Home </a></li>-->
                 </ul>
