Fixato link Accesso Riservato

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <ul>
                     <li><a href="contatti.html" class="hvr-shutter-out-vertical">Contatti</a></li>
                     <li><a href="moduli/preventivo.html" class="hvr-shutter-out-vertical">Preventivi</a></li>
-                    <li><a href="http://abacond.cedhousesuite.com/" class="hvr-shutter-out-vertical">Accesso riservato</a></li>
+                    <li><a href="http://abacond.cedhousesuite.com/" target="_blank" class="hvr-shutter-out-vertical">Accesso riservato</a></li>
                     <!--<li><a href="#" class="hvr-shutter-out-vertical">Home </a></li>-->
                 </ul>
             </nav>
@@ -61,7 +61,7 @@
                     <h2>Veracard</h2>
                     <p>Nonostante una corretta ed attenta gestione le spese di condominio, complici soprattutto le voci relative al riscaldamento ed alla produzione di acqua calda oltre che per l’illuminazione, sono in continuo aumento. Per questo motivo lo studio ABACOND S.a.s. aderisce al circuito VeraCard, al fine di consentire ai propri amministrati di <strong>usufruire di sconti presso negozi ed artigiani convenzionati</strong>, che possano compensare le spese di condominio.</p>
                     <p><strong>Ogni condomino riceverà gratuitamente una Card</strong> grazie alla quale potrà godere di sconti utilizzandola negli esercizi convenzionati in Trentino Alto Adige ed anche in altre zone d’Italia. L’elenco delle città e delle convenzioni è in continua crescita e consultabile sul sito
-                        <a href="www.veracard.it">www.veracard.it</a> e sarà periodicamente trasmesso ai condòmini tramite email o in formato cartaceo.</p>
+                        <a href="http://www.veracard.it" target="_blank">www.veracard.it</a> e sarà periodicamente trasmesso ai condòmini tramite email o in formato cartaceo.</p>
                 </article>
                 <article class="col-xs-12 col-sm-6">
                     <div class="immagine assemblee"></div>
