Rimesso a posto il progetto incasinato

--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
                 <article class="col-xs-12 col-sm-6 col-md-4">
                     <div class="immagine manutenzioni"></div>
                     <h2>Manutenzioni programmate</h2>
-                    <p>E' vero, abbiamo un numero verde per le emergenze, ma odiamo le emergenze. Facciamo perciò tutto il possibile per evitarle. Come?</p>
-                    <p>Programmando periodicamente interventi di manutenzione ordinaria che ci consentono di <strong>ridurre la richiesta di interventi urgenti</strong>, e di <strong>ridurre i costi per i condomini</strong> che amministriamo.</p>
+                    <p>E' vero, abbiamo un numero verde per le emergenze, ma detestiamo le emergenze. Facciamo perciò tutto il possibile per evitarle. Come?</p>
+                    <p>Programmando periodicamente interventi di manutenzione ordinaria che ci consentono di ridurre la richiesta di interventi urgenti e di <strong>ridurre i costi per i condomini</strong> che amministriamo.</p>
                 </article>
             </section>
 
@@ -67,7 +67,8 @@
                     <div class="immagine assemblee"></div>
                     <h2>Assemblee smart</h2>
                     <p>L'assemblea serve per valutare il passato e progettare il futuro. Serve anche per apprendere.</p>
-                    <p>Per tutto ciò servono informazioni, ecco perché facciamo le assemblee utilizzando computer e proiettore, tramite i quali illustriamo argomenti e documenti necessari allo scopo. Da molti anni infatti scansioniamo i documenti dei condomini che possono essere così visualizzati a richiesta in assemblea.</p>
+                    <p>Per tutto ciò servono informazioni, ecco perché facciamo le assemblee utilizzando computer e proiettore, tramite i quali illustriamo argomenti e documenti necessari allo scopo. Da molti anni infatti digitalizziamo i documenti dei condomini che possono essere così visualizzati a richiesta in assemblea ed inseriti nell'archivio ad
+                        <a href="http://abacond.cedhousesuite.com/">accesso riservato</a>, per una libera consultazione da parte dei condòmini.</p>
                 </article>
             </section>
 
