--- a/moduli/preventivo.html
+++ b/moduli/preventivo.html
@@ -21,7 +21,7 @@
             <nav class="col-xs-12 col-sm-6">
                 <ul>
                     <li><a href="../contatti.html" class="hvr-shutter-out-vertical">Contatti</a></li>
-                    <li><a href="preventivo.html" class="hvr-shutter-out-vertical">Preventivi</a></li>
+                    <li><a href="../moduli/preventivo.html" class="hvr-shutter-out-vertical">Preventivi</a></li>
                     <li><a href="http://abacond.cedhousesuite.com/" target="_blank" class="hvr-shutter-out-vertical">Accesso riservato</a></li>
                     <!--<li><a href="#" class="hvr-shutter-out-vertical">Home </a></li>-->
                 </ul>
