Sistemato quasi tutto

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Abacond S.a.s - amministrazione condominiale a Trento e Bassa Valsugana.</title>
+    <title>Abacond S.a.s - amministrazione condominiale a Trento e Valsugana.</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/stile.css">
 </head>
@@ -44,8 +44,9 @@
                 <article class="col-xs-12 col-sm-6 col-md-4">
                     <div class="immagine archivio"></div>
                     <h2>Accesso ai propri documenti</h2>
-                    <p>Essere trasparenti, questo è uno dei nostri vanti.</p>
-                    <p>I nostri amministrati possono <strong>accedere in ogni momento a qualsiasi documento del condominio</strong>, anche tramite l'archivio internet accessibile tramite nome e password.</p>
+                    <p>Essere trasparenti, è la nostra prerogativa.</p>
+                    <p>I nostri amministrati possono accedere in ogni momento ai documenti del proprio condominio, anche tramite l'archivio internet con
+                        <a href="http://abacond.cedhousesuite.com/" class="link" target="_blank">accesso riservato</a>.</p>
                 </article>
                 <article class="col-xs-12 col-sm-6 col-md-4">
                     <div class="immagine manutenzioni"></div>
@@ -61,14 +62,14 @@
                     <h2>Veracard</h2>
                     <p>Nonostante una corretta ed attenta gestione le spese di condominio, complici soprattutto le voci relative al riscaldamento ed alla produzione di acqua calda oltre che per l’illuminazione, sono in continuo aumento. Per questo motivo lo studio ABACOND S.a.s. aderisce al circuito VeraCard, al fine di consentire ai propri amministrati di <strong>usufruire di sconti presso negozi ed artigiani convenzionati</strong>, che possano compensare le spese di condominio.</p>
                     <p><strong>Ogni condomino riceverà gratuitamente una Card</strong> grazie alla quale potrà godere di sconti utilizzandola negli esercizi convenzionati in Trentino Alto Adige ed anche in altre zone d’Italia. L’elenco delle città e delle convenzioni è in continua crescita e consultabile sul sito
-                        <a href="http://www.veracard.it" target="_blank">www.veracard.it</a> e sarà periodicamente trasmesso ai condòmini tramite email o in formato cartaceo.</p>
+                        <a href="http://www.veracard.it" class="link" target="_blank">www.veracard.it</a> e sarà periodicamente trasmesso ai condòmini tramite email o in formato cartaceo.</p>
                 </article>
                 <article class="col-xs-12 col-sm-6">
                     <div class="immagine assemblee"></div>
                     <h2>Assemblee smart</h2>
                     <p>L'assemblea serve per valutare il passato e progettare il futuro. Serve anche per apprendere.</p>
                     <p>Per tutto ciò servono informazioni, ecco perché facciamo le assemblee utilizzando computer e proiettore, tramite i quali illustriamo argomenti e documenti necessari allo scopo. Da molti anni infatti digitalizziamo i documenti dei condomini che possono essere così visualizzati a richiesta in assemblea ed inseriti nell'archivio ad
-                        <a href="http://abacond.cedhousesuite.com/">accesso riservato</a>, per una libera consultazione da parte dei condòmini.</p>
+                        <a href="http://abacond.cedhousesuite.com/" class="link" target="_blank">accesso riservato</a>, per una libera consultazione da parte dei condòmini.</p>
                 </article>
             </section>
 
