--- a/moduli/preventivo.html
+++ b/moduli/preventivo.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Preventivo | Abacond S.a.s</title>
+    <title>Preventivo | Abacond S.a.s  - amministrazione condominiale a Trento e Valsugana.</title>
     <link rel="stylesheet" href="../css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/animate.css">
     <link rel="stylesheet" href="../css/stile.css">
@@ -30,7 +30,7 @@
 
         <main class="row">
             <div class="col-xs-12 col-sm-8 col-sm-offset-2">
-                <h2>Condomini</h2>
+                <h2>Richiesta preventivi per condomini</h2>
                 <p>Vi chiediamo di compilare con precisione i campi sottostanti, in modo da poter proporre un adeguato preventivo per la gestione del condominio da voi richiesta.</p>
 
                 <!----------------------------- FORM CONDOMINI ---------------------------------------->
@@ -123,7 +123,7 @@
                     <div id="msgSubmitCondomini" class="h3 text-center hidden"></div>
                     <div class="clearfix"></div>
                 </form>
-                <a href="#condomini" id="condomini" class="pulsante preventivi">Richiedi un preventivo</a>
+                <!--<a href="#condomini" id="condomini" class="pulsante preventivi">Richiedi un preventivo</a>-->
             </div>
             <!--<div class="col-xs-12 col-sm-6">-->
                 <!--<img src="img/ipad.jpg" alt="">-->
@@ -148,17 +148,17 @@
 </body>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
 <script type="text/javascript" src="../js/validator.min.js"></script>
-<script src="js/scripts.js"></script>
+<script src="../js/scripts.js"></script>
 
-<script>
-    $('#condomini').click(function(){
-        $('#fornitoriForm,#condomini').hide();
-        $('#condominiForm,#fornitori').show(500);
-    });
+<!--<script>-->
+    <!--$('#condomini').click(function(){-->
+        <!--$('#fornitoriForm,#condomini').hide();-->
+        <!--$('#condominiForm,#fornitori').show(500);-->
+    <!--});-->
 
-    $('#fornitori').click(function(){
-        $('#fornitoriForm,#condomini').show(500);
-        $('#condominiForm,#fornitori').hide();
-    });
-</script>
+    <!--$('#fornitori').click(function(){-->
+        <!--$('#fornitoriForm,#condomini').show(500);-->
+        <!--$('#condominiForm,#fornitori').hide();-->
+    <!--});-->
+<!--</script>-->
 </html>
