--- a/contatti.html
+++ b/contatti.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Contatti | Abacond S.a.s</title>
+    <title>Contatti | Abacond S.a.s  - amministrazione condominiale a Trento e Valsugana.</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/stile.css">
 </head>
@@ -28,61 +28,51 @@
         </header>
 
         <main class="row">
-            <section class="col-sm-12">
+            <div class="col-xs-12 col-sm-3 col-sm-push-9" id="recapiti">
                 <div class="row">
-                    <div class="col-sm-12">
+                    <section class="col-sm-12">
                         <h1>Recapiti</h1>
-                    </div>
-                    <div class="col-sm-6">
                         <h3>Sede operativa</h3>
-                        <p>Via Edda Albertini, 8 - Trento</p>
+                        <p>Via Edda Albertini, 8<br>Trento</p>
                         <p>0461-752972</p>
                         <p>0461-756361</p>
-                    </div>
-                    <div class="col-sm-6">
+
                         <h3>Sede legale ed amministrativa</h3>
-                        <p>Via Roncegno 21/B - Borgo Valsugana (TN)</p>
+                        <p>Via Roncegno 21/B<br>Borgo Valsugana (TN)</p>
                         <p>0461-752972</p>
                         <p>0461-756361</p>
+                    </section>
+                </div>
+            </div>
+            <div class="col-xs-12 col-sm-9 col-sm-pull-3" id="contattaci">
+                <h1>Contattaci!</h1>
+                <div class="row">
+                    <div class="col-sm-6 immagine contatto"></div>
+                    <div class="col-sm-6">
+                        <h2>Contatto generico</h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab accusamus assumenda dolor dolore eius hic impedit magnam nemo, neque nulla pariatur possimus quae quis suscipit temporibus tenetur ut velit, voluptatum.</p>
+                        <a href="moduli/contatto.html" class="link">Vai al form contatti generico >></a>
                     </div>
                 </div>
-            </section>
-            <section class="col-sm-6">
-                <h1>Contattaci!</h1>
-                <p>Compila il form sottostante per contattarci via e-mail.</p>
-                <p>Sei un nostro condomino?<br>Per segnalarci eventuali guasti contatta il numero verde 800 046 165, attivo 24/24 ore.</p>
-                <form role="form" id="contactForm" data-toggle="validator" class="shake">
-                    <div class="row">
-                        <div class="form-group col-sm-6">
-                            <label for="name" class="h4">Nome e Cognome</label>
-                            <input type="text" class="form-control" id="name" placeholder="Inserisci nome e cognome" required data-error="Inserisci nome e cognome.">
-                            <div class="help-block with-errors"></div>
-                        </div>
-                        <div class="form-group col-sm-6">
-                            <label for="email" class="h4">Email</label>
-                            <input type="email" class="form-control" id="email" placeholder="Inserisci email" required required data-error="Inserisci email.">
-                            <div class="help-block with-errors"></div>
-                        </div>
+                <hr>
+                <div class="row">
+                    <div class="col-sm-6 immagine fornitori"></div>
+                    <div class="col-sm-6">
+                        <h2>Contatto Fornitori</h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab accusamus assumenda dolor dolore eius hic impedit magnam nemo, neque nulla pariatur possimus quae quis suscipit temporibus tenetur ut velit, voluptatum.</p>
+                        <a href="moduli/fornitori.html" class="link">Vai al form contatto fornitori >></a>
                     </div>
-                    <div class="form-group">
-                        <label for="message" class="h4 ">Messaggio</label>
-                        <textarea id="message" class="form-control" rows="5" placeholder="Inserisci il tuo messaggio" required required data-error="Inserisci il tuo messaggio."></textarea>
-                        <div class="help-block with-errors"></div>
-                    </div>
-                    <div class="spinner">
-                        <div class="bounce1"></div>
-                        <div class="bounce2"></div>
-                        <div class="bounce3"></div>
-                    </div>
-                    <input type="submit" id="form-submit" class="btn btn-success btn-lg pull-right " value="Invia">
-                    <div id="msgSubmit" class="h3 text-center hidden"></div>
-                    <div class="clearfix"></div>
-                </form>
-            </section>
-            <div class="col-sm-6">
-                <h2>Fornitori</h2>
-                <p>Per segnalare la vostra attività o proporvi per effettuare manutenzioni nei condomini che amministriamo, compilate il
-                    <a href="moduli/fornitori.html">modulo fornitori</a> </p>
+                </div>
+                <!--<hr>-->
+                <!--<div class="row">-->
+                <!--<div class="col-sm-6 immagine collaboratori"></div>-->
+                <!--<div class="col-sm-6">-->
+                <!--<h2>Contatto generico</h2>-->
+                <!--<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab accusamus assumenda dolor dolore eius hic impedit magnam nemo, neque nulla pariatur possimus quae quis suscipit temporibus tenetur ut velit, voluptatum.</p>-->
+                <!--<a href="#" class="link">Vai al form contatti generico >></a>-->
+                <!--</div>-->
+                <!--</div>-->
+
             </div>
         </main>
         <footer class="row">
@@ -101,7 +91,10 @@
         </footer>
     </div>
 </body>
+<script>
+    console.log($('.spinner'));
+</script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
-<script src="js/validator.min.js"></script>
-<script src="js/scripts.js"></script>
+<script src="../js/validator.min.js"></script>
+<script src="../js/scripts.js"></script>
 </html>
