Fixate ultime cose

--- a/contatti.html
+++ b/contatti.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Contatti | Abacond S.a.s  - amministrazione condominiale a Trento e Valsugana.</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/stile.css">
 </head>
 <body>
@@ -34,18 +35,17 @@
                         <h1>Recapiti</h1>
                         <h3>Sede operativa</h3>
                         <p>Via Edda Albertini, 8<br>Trento</p>
-                        <p>0461-752972</p>
-                        <p>0461-756361</p>
-
+                        <span><i class="fa fa-phone"></i> 0461-752972</span>
+                        <!--<span><i class="fa fa-fax"></i> 0461-756361</span>-->
                         <h3>Sede legale ed amministrativa</h3>
                         <p>Via Roncegno 21/B<br>Borgo Valsugana (TN)</p>
-                        <p>0461-752972</p>
-                        <p>0461-756361</p>
+                        <span><i class="fa fa-phone"></i> 0461-752972</span>
+                        <!--<span><i class="fa fa-fax"></i> 0461-756361</span>-->
                     </section>
                 </div>
             </div>
             <div class="col-xs-12 col-sm-9 col-sm-pull-3" id="contattaci">
-                <h1>Contattaci!</h1>
+                <h1>Contatti</h1>
                 <div class="row">
                     <div class="col-sm-6 immagine contatto"></div>
                     <div class="col-sm-6">
