--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <div class="row">
                 <div class="col-xs-12">
                     <h1>Proponiamo i servizi più innovativi in Trentino!</h1>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis dolorem facilis id nisi odio perspiciatis repellendus rerum similique tempora tenetur. Aliquam asperiores commodi laudantium nisi odio odit similique tenetur, velit.</p>
+                    <!--<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis dolorem facilis id nisi odio perspiciatis repellendus rerum similique tempora tenetur. Aliquam asperiores commodi laudantium nisi odio odit similique tenetur, velit.</p>-->
                 </div>
             </div>
 
