--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <main>
             <div class="row">
                 <div class="col-xs-12">
-                    <h1>Proponiamo i servizi più innovativi in Trentino!</h1>
+                    <h1>Proponiamo servizi innovativi in Trentino!</h1>
                     <!--<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis dolorem facilis id nisi odio perspiciatis repellendus rerum similique tempora tenetur. Aliquam asperiores commodi laudantium nisi odio odit similique tenetur, velit.</p>-->
                 </div>
             </div>
@@ -58,8 +58,10 @@
 
             <section class="row servizio">
                 <article class="col-xs-12 col-sm-6">
-                    <div class="immagine veracard"></div>
-                    <h2>Veracard</h2>
+                    <div>
+                        <a href="http://www.veracard.it" class="immagine veracard">Veracard</a>
+                    </div>
+                    <h2><a href="http://www.veracard.it">Veracard</a></h2>
                     <p>Nonostante una corretta ed attenta gestione le spese di condominio, complici soprattutto le voci relative al riscaldamento ed alla produzione di acqua calda oltre che per l’illuminazione, sono in continuo aumento. Per questo motivo lo studio ABACOND S.a.s. aderisce al circuito VeraCard, al fine di consentire ai propri amministrati di <strong>usufruire di sconti presso negozi ed artigiani convenzionati</strong>, che possano compensare le spese di condominio.</p>
                     <p><strong>Ogni condomino riceverà gratuitamente una Card</strong> grazie alla quale potrà godere di sconti utilizzandola negli esercizi convenzionati in Trentino Alto Adige ed anche in altre zone d’Italia. L’elenco delle città e delle convenzioni è in continua crescita e consultabile sul sito
                         <a href="http://www.veracard.it" class="link" target="_blank">www.veracard.it</a> e sarà periodicamente trasmesso ai condòmini tramite email o in formato cartaceo.</p>
@@ -84,18 +86,18 @@
             </section>
         </main>
 
-        <footer class="row">
-            <div class="col-xs-12 col-sm-4">
-                <h2>Titolo sezione</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum esse, fugiat molestiae praesentium repellendus sequi vitae voluptas voluptates! Alias autem corporis doloremque enim laudantium quisquam veritatis. Autem, optio quia. Hic.</p>
+        <footer class="row text-center">
+            <div class="col-xs-12 col-sm-3">
+                <h3><a href="contatti.html">Contattaci</a></h3>
             </div>
-            <div class="col-xs-12 col-sm-4">
-                <h2>Titolo sezione</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum esse, fugiat molestiae praesentium repellendus sequi vitae voluptas voluptates! Alias autem corporis doloremque enim laudantium quisquam veritatis. Autem, optio quia. Hic.</p>
+            <div class="col-xs-12 col-sm-6">
+                <h3><a href="index.html">Abacond S.a.s. di geom. Sergio Capra e C.</a></h3>
+                <span>P. IVA: 01758760225</span><br>
+                <span>Progettato e creato da <a href="http://www.alessandrocapraux.com">Alessandro Capra</a></span>
             </div>
-            <div class="col-xs-12 col-sm-4">
-                <h2>Titolo sezione</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum esse, fugiat molestiae praesentium repellendus sequi vitae voluptas voluptates! Alias autem corporis doloremque enim laudantium quisquam veritatis. Autem, optio quia. Hic.</p>
+            <div class="col-xs-12 col-sm-3">
+                <h3>Privacy policy</h3>
+                <a href="//www.iubenda.com/privacy-policy/7829420" class="iubenda-white iubenda-embed" title="Privacy Policy">Privacy Policy</a><script type="text/javascript">(function (w,d) {var loader = function () {var s = d.createElement("script"), tag = d.getElementsByTagName("script")[0]; s.src = "//cdn.iubenda.com/iubenda.js"; tag.parentNode.insertBefore(s,tag);}; if(w.addEventListener){w.addEventListener("load", loader, false);}else if(w.attachEvent){w.attachEvent("onload", loader);}else{w.onload = loader;}})(window, document);</script>
             </div>
         </footer>
     </div>
