--- a/moduli/contatto.html
+++ b/moduli/contatto.html
@@ -13,7 +13,7 @@
         <header class="row">
             <div class="col-xs-12 col-sm-6">
                 <div id="logo">
-                    <a href="index.html"><img src="../img/logo.png" alt=""></a>
+                    <a href="../index.html"><img src="../img/logo.png" alt=""></a>
                 </div>
                 <div id="punchline">Amministrazione condominiale innovativa e affidabile.</div>
             </div>
@@ -31,7 +31,7 @@
             <div class="col-sm-8 col-sm-offset-2">
                 <h1>Contattaci!</h1>
                 <p>Compila il form sottostante per contattarci via e-mail.</p>
-                <p>Sei un nostro condomino?<br>Per segnalarci eventuali guasti contatta il numero verde 800 046 165, attivo 24/24 ore.</p>
+                <p>Sei un nostro condomino?<br>Per segnalarci eventuali guasti contatta il <span class="verde">numero verde 800 046 165</span>, attivo 24/24 ore.</p>
                 <form role="form" id="contactForm" data-toggle="validator" class="shake">
                     <div class="row">
                         <div class="form-group col-sm-6">
