--- a/moduli/fornitori.html
+++ b/moduli/fornitori.html
@@ -29,7 +29,7 @@
 
         <main class="row">
             <div class="col-sm-8 col-sm-offset-2">
-                <h1>Richiesta collaborazione per fornitori</h1>
+                <h1>Segnalazione attività dai fornitori</h1>
                 <form action="../php/fornitori.php" role="form" id="fornitoriForm" data-toggle="validator" class="col-xs-12 shake">
                     <div class="row">
                         <div class="form-group col-sm-6">
