--- a/moduli/preventivo.html
+++ b/moduli/preventivo.html
@@ -106,9 +106,7 @@
                             <div class="help-block with-errors"></div>
                         </div>
                         <div class="form-group col-sm-6">
-                            <!--<label for="riscaldamentoCondominio" class="h4">Riscaldamento centralizzato</label>-->
-                            <!--<input type="text" class="form-control" id="riscaldamentoCondominio" placeholder="Inserisci numero ascensori" data-error="Inserire numero ascensori">-->
-                            <h4>Riscaldamento centralizzato</h4>
+                            <h4 style="color: #F2842D;">Riscaldamento centralizzato</h4>
                             <label class="radio-inline"><input type="radio" value="Sì" name="riscaldamento">Sì</label>
                             <label class="radio-inline"><input type="radio" value="No" name="riscaldamento">No</label>
                             <!--<div class="help-block with-errors"></div>-->
