--- a/contatti.html
+++ b/contatti.html
@@ -47,19 +47,23 @@
             <div class="col-xs-12 col-sm-9 col-sm-pull-3" id="contattaci">
                 <h1>Contatti</h1>
                 <div class="row">
-                    <div class="col-sm-6 immagine contatto"></div>
                     <div class="col-sm-6">
-                        <h2>Contatto generico</h2>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab accusamus assumenda dolor dolore eius hic impedit magnam nemo, neque nulla pariatur possimus quae quis suscipit temporibus tenetur ut velit, voluptatum.</p>
+                        <a href="moduli/contatto.html" class="immagine contatto">Contatto Generico</a>
+                    </div>
+                    <div class="col-sm-6">
+                        <h2><a href="moduli/contatto.html">Contatto generico</a></h2>
+                        <p>Compila il form per contattarci via e-mail.</p>
                         <a href="moduli/contatto.html" class="link">Vai al form contatti generico >></a>
                     </div>
                 </div>
                 <hr>
                 <div class="row">
-                    <div class="col-sm-6 immagine fornitori"></div>
                     <div class="col-sm-6">
-                        <h2>Contatto Fornitori</h2>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab accusamus assumenda dolor dolore eius hic impedit magnam nemo, neque nulla pariatur possimus quae quis suscipit temporibus tenetur ut velit, voluptatum.</p>
+                        <a href="moduli/fornitori.html" class="immagine fornitori">Contatto fornitori</a>
+                    </div>
+                    <div class="col-sm-6">
+                        <h2><a href="moduli/fornitori.html">Contatto Fornitori</a></h2>
+                        <p>Per segnalare la vostra attività o proporvi per effettuare manutenzioni nei condomini che amministriamo.</p>
                         <a href="moduli/fornitori.html" class="link">Vai al form contatto fornitori >></a>
                     </div>
                 </div>
