Fatto un po' di SEO

--- a/moduli/contatto.html
+++ b/moduli/contatto.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="Description" content="Compila il form per contattarci via email - www.abacond.com">
     <title>Contatto generico | Abacond S.a.s  - amministrazione condominiale a Trento e Valsugana.</title>
     <link rel="stylesheet" href="../css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/stile.css">
@@ -13,7 +14,7 @@
         <header class="row">
             <div class="col-xs-12 col-sm-6">
                 <div id="logo">
-                    <a href="../index.html"><img src="../img/logo.png" alt=""></a>
+                    <a href="../index.html"><img src="../img/logo.png" alt="Logo Abacond"></a>
                 </div>
                 <div id="punchline">Amministrazione condominiale innovativa e affidabile.</div>
             </div>
@@ -62,18 +63,18 @@
             </div>
         </main>
 
-        <footer class="row">
-            <div class="col-xs-12 col-sm-4">
-                <h2>Titolo sezione</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum esse, fugiat molestiae praesentium repellendus sequi vitae voluptas voluptates! Alias autem corporis doloremque enim laudantium quisquam veritatis. Autem, optio quia. Hic.</p>
+        <footer class="row text-center">
+            <div class="col-xs-12 col-sm-3">
+                <h3><a href="contatti.html">Contattaci</a></h3>
             </div>
-            <div class="col-xs-12 col-sm-4">
-                <h2>Titolo sezione</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum esse, fugiat molestiae praesentium repellendus sequi vitae voluptas voluptates! Alias autem corporis doloremque enim laudantium quisquam veritatis. Autem, optio quia. Hic.</p>
+            <div class="col-xs-12 col-sm-6">
+                <h3><a href="index.html">Abacond S.a.s. di geom. Sergio Capra e C.</a></h3>
+                <span>P. IVA: 01758760225</span><br>
+                <span>Progettato e creato da <a href="http://www.alessandrocapraux.com">Alessandro Capra</a></span>
             </div>
-            <div class="col-xs-12 col-sm-4">
-                <h2>Titolo sezione</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum esse, fugiat molestiae praesentium repellendus sequi vitae voluptas voluptates! Alias autem corporis doloremque enim laudantium quisquam veritatis. Autem, optio quia. Hic.</p>
+            <div class="col-xs-12 col-sm-3">
+                <h3>Privacy policy</h3>
+                <a href="//www.iubenda.com/privacy-policy/7829420" class="iubenda-white iubenda-embed" title="Privacy Policy">Privacy Policy</a><script type="text/javascript">(function (w,d) {var loader = function () {var s = d.createElement("script"), tag = d.getElementsByTagName("script")[0]; s.src = "//cdn.iubenda.com/iubenda.js"; tag.parentNode.insertBefore(s,tag);}; if(w.addEventListener){w.addEventListener("load", loader, false);}else if(w.attachEvent){w.attachEvent("onload", loader);}else{w.onload = loader;}})(window, document);</script>
             </div>
         </footer>
     </div>
