--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="Description" content="Gestione condominiale innovativa a Trento e Valsugana. Richiedici un preventivo gratuito! - www.abacond.com">
     <title>Abacond S.a.s - amministrazione condominiale a Trento e Valsugana.</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/stile.css">
@@ -13,7 +14,7 @@
         <header class="row">
             <div class="col-xs-12 col-sm-6">
                 <div id="logo">
-                    <a href="index.html"><img src="img/logo.png" alt=""></a>
+                    <a href="index.html"><img src="img/logo.png" alt="Logo Abacond"></a>
                 </div>
                 <div id="punchline">Amministrazione condominiale innovativa e affidabile.</div>
             </div>
