--- a/moduli/contatto.html
+++ b/moduli/contatto.html
@@ -33,7 +33,7 @@
                 <h1>Contattaci!</h1>
                 <p>Compila il form sottostante per contattarci via e-mail.</p>
                 <p>Sei un nostro condomino?<br>Per segnalarci eventuali guasti contatta il <span class="verde">numero verde 800 046 165</span>, attivo 24/24 ore.</p>
-                <form role="form" id="contactForm" data-toggle="validator" class="shake">
+                <form role="form" action="../php/contatti.php" id="contactForm" data-toggle="validator" class="shake">
                     <div class="row">
                         <div class="form-group col-sm-6">
                             <label for="name" class="h4">Nome e Cognome</label>
