--- a/moduli/contatto.html
+++ b/moduli/contatto.html
@@ -8,6 +8,7 @@
     <title>Contatto generico | Abacond S.a.s  - amministrazione condominiale a Trento e Valsugana.</title>
     <link rel="stylesheet" href="../css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/stile.css">
+    <!--<script src='https://www.google.com/recaptcha/api.js?hl=it' async defer></script>-->
 </head>
 <body>
     <div class="container principale">
@@ -33,7 +34,7 @@
                 <h1>Contattaci!</h1>
                 <p>Compila il form sottostante per contattarci via e-mail.</p>
                 <p>Sei un nostro condomino?<br>Per segnalarci eventuali guasti contatta il <span class="verde">numero verde 800 046 165</span>, attivo 24/24 ore.</p>
-                <form role="form" action="../php/contatti.php" id="contactForm" data-toggle="validator" class="shake">
+                <form role="form" action="../php/contatti.php" id="contactForm" data-toggle="validator" class="shake" method="post">
                     <div class="row">
                         <div class="form-group col-sm-6">
                             <label for="name" class="h4">Nome e Cognome</label>
@@ -56,6 +57,7 @@
                         <div class="bounce2"></div>
                         <div class="bounce3"></div>
                     </div>
+                    <!--<div class="g-recaptcha" data-sitekey="6LcvnR0TAAAAAID0oVrvQ1L41HXz-4BptOXK-Oos"></div>-->
                     <input type="submit" id="form-submit" class="btn btn-success btn-lg pull-right " value="Invia">
                     <div id="msgSubmit" class="h3 text-center hidden"></div>
                     <div class="clearfix"></div>
