Finito form collaboratori

--- a/contatti.html
+++ b/contatti.html
@@ -68,6 +68,17 @@
                         <a href="moduli/fornitori.html" class="link">Vai al form contatto fornitori >></a>
                     </div>
                 </div>
+                <hr>
+                <div class="row">
+                    <div class="col-sm-6">
+                        <a href="moduli/collaboratori.html" class="immagine collaboratori">Contatto collaboratori</a>
+                    </div>
+                    <div class="col-sm-6">
+                        <h2><a href="moduli/collaboratori.html">Contatto Collaboratori</a></h2>
+                        <p>Vuoi segnalare il tuo nome per eventuali future collaborazioni? Compila il form, all'occorrenza potrai essere contattato/a.</p>
+                        <a href="moduli/collaboratori.html" class="link">Vai al form contatto collaboratori >></a>
+                    </div>
+                </div>
                 <!--<hr>-->
                 <!--<div class="row">-->
                 <!--<div class="col-sm-6 immagine collaboratori"></div>-->
