--- a/moduli/collaboratori.html
+++ b/moduli/collaboratori.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="Description" content="Compila il form per contattarci via email - www.abacond.com">
+    <meta name="Description" content="Compila il form collaboratori per contattarci via email - www.abacond.com">
     <title>Contatto generico | Abacond S.a.s  - amministrazione condominiale a Trento e Valsugana.</title>
     <link rel="stylesheet" href="../css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/stile.css">
@@ -31,10 +31,9 @@
 
         <main class="row">
             <div class="col-sm-8 col-sm-offset-2">
-                <h1>Contattaci!</h1>
-                <p>Compila il form sottostante per contattarci via e-mail.</p>
-                <p>Sei un nostro condomino?<br>Per segnalarci eventuali guasti contatta il <span class="verde">numero verde 800 046 165</span>, attivo 24/24 ore.</p>
-                <form role="form" action="../php/contatti.php" id="contactForm" data-toggle="validator" class="shake" method="post">
+                <h1>Contatto per collaboratori</h1>
+                <p>Vuoi segnalare il tuo nome per eventuali future collaborazioni? Compila il form, all'occorrenza potrai essere contattato/a.</p>
+                <form role="form" action="../php/collaboratori.php" id="collaboratoriForm" data-toggle="validator" class="shake" method="post">
                     <div class="row">
                         <div class="form-group col-sm-6">
                             <label for="name" class="h4 obbligatorio">Nome e Cognome</label>
@@ -42,15 +41,35 @@
                             <div class="help-block with-errors"></div>
                         </div>
                         <div class="form-group col-sm-6">
+                            <label for="residenza" class="h4 obbligatorio">Indirizzo di residenza</label>
+                            <input type="text" class="form-control" id="residenza" placeholder="Inserisci indirizzo di residenza" required data-error="Inserisci indirizzo di residenza.">
+                            <div class="help-block with-errors"></div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="form-group col-sm-6">
                             <label for="email" class="h4 obbligatorio">Email</label>
                             <input type="email" class="form-control" id="email" placeholder="Inserisci email" required data-error="Inserisci email.">
                             <div class="help-block with-errors"></div>
                         </div>
-                    </div>
-                    <div class="form-group">
-                        <label for="message" class="h4 obbligatorio">Messaggio</label>
-                        <textarea id="message" class="form-control" rows="5" placeholder="Inserisci il tuo messaggio" required data-error="Inserisci il tuo messaggio."></textarea>
-                        <div class="help-block with-errors"></div>
+                        <div class="form-group col-sm-6">
+                            <label for="titolo" class="h4 obbligatorio">Titolo di studio</label>
+                            <!--<input type="text" class="form-control" id="titolo" required data-error="Scegli un titolo di studio.">-->
+                            <select name="titolo" id="titolo" class="form-control" required data-error="Scegli un titolo di studio.">
+                                <option value="" disabled selected>Seleziona opzione</option>
+                                <option value="Scuola media inferiore">Scuola media inferiore</option>
+                                <option value="Scuola professionale">Scuola professionale</option>
+                                <option value="Scuola media superiore">Scuola media superiore</option>
+                                <option value="Laurea">Laurea</option>
+                                <option value="Laurea magistrale">Laurea magistrale</option>
+                            </select>
+                            <div class="help-block with-errors"></div>
+                        </div>
+                        <div class="form-group col-sm-12">
+                            <label for="competenze" class="h4 obbligatorio">Competenze/esperienze</label>
+                            <textarea id="competenze" class="form-control" rows="5" placeholder="Descrivere brevemente competenze ed esperienze acquisite, ad esempio: contabilità aziendale, progettazione civile, segreteria..." required data-error="Inserisci il tuo messaggio."></textarea>
+                            <div class="help-block with-errors"></div>
+                        </div>
                     </div>
                     <div class="spinner">
                         <div class="bounce1"></div>
@@ -59,7 +78,7 @@
                     </div>
                     <!--<div class="g-recaptcha" data-sitekey="6LcvnR0TAAAAAID0oVrvQ1L41HXz-4BptOXK-Oos"></div>-->
                     <input type="submit" id="form-submit" class="btn btn-success btn-lg pull-right " value="Invia">
-                    <div id="msgSubmit" class="h3 text-center hidden"></div>
+                    <div id="msgSubmitCollaboratori" class="h3 text-center hidden"></div>
                     <div class="clearfix"></div>
                 </form>
             </div>
