FIxato footer e menu

--- a/contatti.html
+++ b/contatti.html
@@ -96,7 +96,7 @@
                 <h3><a href="contatti.html">Contattaci</a></h3>
             </div>
             <div class="col-xs-12 col-sm-6">
-                <h3><a href="index.html">Abacond S.a.s. di geom. Sergio Capra e C.</a></h3>
+                <h3>Abacond S.a.s. di geom. Sergio Capra e C.</h3>
                 <span>P. IVA: 01758760225</span><br>
                 <span>Progettato e creato da <a href="http://www.alessandrocapraux.com">Alessandro Capra</a></span>
             </div>
