Creata pagina Immobiliare

--- a/moduli/fornitori.html
+++ b/moduli/fornitori.html
@@ -22,6 +22,7 @@
                 <ul>
                     <li><a href="../contatti.html" class="active hvr-shutter-out-vertical">Contatti</a></li>
                     <li><a href="preventivo.html" class="hvr-shutter-out-vertical">Preventivi</a></li>
+                    <li><a href="../offerte-immobiliari.html" class="hvr-shutter-out-vertical">Offerte immobiliari</a></li>
                     <li><a href="http://abacond.cedhousesuite.com" target="_blank" class="hvr-shutter-out-vertical">Accesso riservato</a></li>
                     <!--<li><a href="#" class="hvr-shutter-out-vertical">Home </a></li>-->
                 </ul>
