--- a/contatti.html
+++ b/contatti.html
@@ -23,6 +23,7 @@
                 <ul>
                     <li><a href="#" class="active hvr-shutter-out-vertical">Contatti</a></li>
                     <li><a href="moduli/preventivo.html" class="hvr-shutter-out-vertical">Preventivi</a></li>
+                    <li><a href="offerte-immobiliari.html" class="hvr-shutter-out-vertical">Offerte immobiliari</a></li>
                     <li><a href="http://abacond.cedhousesuite.com/" target="_blank" class="hvr-shutter-out-vertical">Accesso riservato</a></li>
                     <!--<li><a href="#" class="hvr-shutter-out-vertical">Home </a></li>-->
                 </ul>
